--- a/src/templates/podcastTemplate/podcastTemplate.module.css
+++ b/src/templates/podcastTemplate/podcastTemplate.module.css
@@ -21,29 +21,29 @@
   justify-content: center;
 }
 
-.Template__layout a:first-of-type {
+.Template__layout a.Home_link {
   margin: 0 auto;
   display: none;
 }
 
 @media (min-height: 555px) {
-  p.Home {
+  .Template__layout a.Home_link {
+    margin: 0 auto;
+    display: block;
+  } 
+
+
+  .Home_link p.Home {
     font-size: 1rem;
     transition: color 0.2s;
   }
 
-  p.Home::before {
+  .Home_link p.Home::before {
     content: "\140A";
     position: relative;
     top: 1px;
-    left: 0;
+    left: -5px;
     font-weight: 900;
-  }
-
-  .Template__layout a:first-of-type {
-    margin: 0 auto;
-    display: inline-block;
-    
   }
 
   .Header__conintainer {
@@ -79,10 +79,6 @@
     font-weight: 900;
     display: none;
   }
-
-  .Template__layout a:first-of-type{
-    display: none;
-  }
 }
 
 .Template__layout a {
@@ -94,7 +90,7 @@
   height: 6rem;
   width: 640px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   background-color: var(--main_white);
   transition: ease 0.2s;
@@ -103,6 +99,11 @@
   left: 50%;
   margin-left: -320px;
   z-index: 3;
+}
+.Header__conintainer{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .Header__conintainer a {
@@ -147,7 +148,6 @@
   .Podcast__paragraph_main{
     font-size: calc(0.85rem - 5%);
   }
-  
 }
 
 .Italic {
@@ -185,4 +185,39 @@
 
 .Podcast__player {
   margin: 1rem 0 0 auto;
+}
+
+.Link__episode_container{
+  margin: 5rem auto 1rem auto;
+  width: 75%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Link__episode_container a.ToggleEpisode__link{
+  font-weight: 100;
+  color: var(--primary_black);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.Link__episode_container a p.PreviousEpisode, .Link__episode_container a p.NextEpisode {
+  font-size: .85rem;
+  margin-bottom: 0;
+  height: auto;
+  width: auto;
+}
+
+.Link__episode_container a.ToggleEpisode__link:hover {
+  color: var(--second_grey);
+  font-weight: 900;
+}
+
+@media(max-width: 500px){
+  .Link__episode_container{
+    flex-direction: column;
+    height: 4.25rem;
+  }
 }
