--- a/src/templates/podcastTemplate/podcastTemplate.module.css
+++ b/src/templates/podcastTemplate/podcastTemplate.module.css
@@ -14,30 +14,23 @@
   left: 0;
 }
 
-.Header__conintainer {
+.Header__container {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.Template__layout a.Home_link {
-  margin: 0 auto;
-  display: none;
-}
-
 @media (min-height: 555px) {
   .Template__layout a.Home_link {
     margin: 0 auto;
     display: block;
-  } 
-
-
+  }
   .Home_link p.Home {
     font-size: 1rem;
     transition: color 0.2s;
+    margin: 0;
   }
-
   .Home_link p.Home::before {
     content: "\140A";
     position: relative;
@@ -45,16 +38,21 @@
     left: -5px;
     font-weight: 900;
   }
-
-  .Header__conintainer {
+  .Header__container {
+    display: flex;
     justify-content: space-between;
+    align-items: center;
+    
   }
-
+  .Header__container a {
+    text-decoration: none;
+    color: var(--main_black);
+    font-weight: 600;
+  }
   p.Home {
     font-size: 1rem;
     transition: color 0.2s;
   }
-
   p.Home::before {
     content: "\140A";
     position: relative;
@@ -64,13 +62,12 @@
   }
 }
 
-@media(max-width: 554px){
+@media(max-width: 554px) {
   p.Home {
     font-size: 1rem;
     transition: color 0.2s;
     display: none;
   }
-
   p.Home::before {
     content: "\140A";
     position: relative;
@@ -78,6 +75,13 @@
     left: 0;
     font-weight: 900;
     display: none;
+  }
+  .Template__layout a.Home_link {
+    margin: 0;
+  }
+  .Header__container {
+    width: auto;
+    margin: 0 auto;
   }
 }
 
@@ -100,25 +104,7 @@
   margin-left: -320px;
   z-index: 3;
 }
-.Header__conintainer{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
 
-.Header__conintainer a {
-  text-decoration: none;
-  color: var(--main_black);
-  font-weight: 600;
-}
-
-.Header__conintainer a:hover p.Home {
-  color: var(--second_grey);
-}
-
-.Header__conintainer p {
-  margin-bottom: 0;
-}
 .Header__layout.Scroll {
   height: 4.25rem;
   width: 640px;
@@ -144,8 +130,8 @@
   line-height: 1.25rem;
 }
 
-@media(max-width: 600px){
-  .Podcast__paragraph_main{
+@media(max-width: 600px) {
+  .Podcast__paragraph_main {
     font-size: calc(0.85rem - 5%);
   }
 }
@@ -187,7 +173,7 @@
   margin: 1rem 0 0 auto;
 }
 
-.Link__episode_container{
+.Link__episode_container {
   margin: 5rem auto 1rem auto;
   width: 75%;
   height: auto;
@@ -196,7 +182,7 @@
   justify-content: space-between;
 }
 
-.Link__episode_container a.ToggleEpisode__link{
+.Link__episode_container a.ToggleEpisode__link {
   font-weight: 100;
   color: var(--primary_black);
   text-decoration: none;
@@ -215,20 +201,20 @@
   font-weight: 900;
 }
 
-
-p.Unpublished{
+p.Unpublished {
   margin: 8.5rem auto 8.5rem auto;
   text-align: center;
   color: var(--primary_grey);
   font-size: 3rem;
   height: 1em;
 }
-@media(max-width: 500px){
-  .Link__episode_container{
+
+@media(max-width: 500px) {
+  .Link__episode_container {
     flex-direction: column;
     height: 4.25rem;
   }
-  p.Unpublished{
+  p.Unpublished {
     font-size: 1.5rem;
   }
 }
