--- a/src/components/navigationMobile/navigationMobile.module.css
+++ b/src/components/navigationMobile/navigationMobile.module.css
@@ -62,6 +62,16 @@
   color: var(--main_black);
 }
 
+button.Button__PodcastsModal_mobile {
+  border: none;
+  background-color: var(--main_white);
+  outline: 0;
+}
+
+button.Button__PodcastsModal_mobile:active{
+  outline: 0;
+}
+
 @media (min-width: 600px) {
   .NavigationMobile__layout {
     display: none;
