--- a/src/components/podcastsList/podcastsList.module.css
+++ b/src/components/podcastsList/podcastsList.module.css
@@ -1,41 +1,11 @@
 .PodcastList__main_mobile {
   overflow-y: auto;
   -webkit-overflow-y-scrolling: touch;
-  -webkit-mask-image: linear-gradient(
-    to top,
-    transparent,
-    black 20px,
-    black 90%,
-    transparent
-  );
-  -ms-mask-image: linear-gradient(
-    to top,
-    transparent,
-    black 20px,
-    black 90%,
-    transparent
-  );
-  -o-mask-image: linear-gradient(
-    to top,
-    transparent,
-    black 20px,
-    black 90%,
-    transparent
-  );
-  -moz-mask-image: linear-gradient(
-    to top,
-    transparent,
-    black 20px,
-    black 90%,
-    transparent
-  );
-  mask-image: linear-gradient(
-    to top,
-    transparent,
-    black 20px,
-    black 90%,
-    transparent
-  );
+  -webkit-mask-image: linear-gradient( to top, transparent, black 20px, black 90%, transparent);
+  -ms-mask-image: linear-gradient( to top, transparent, black 20px, black 90%, transparent);
+  -o-mask-image: linear-gradient( to top, transparent, black 20px, black 90%, transparent);
+  -moz-mask-image: linear-gradient( to top, transparent, black 20px, black 90%, transparent);
+  mask-image: linear-gradient( to top, transparent, black 20px, black 90%, transparent);
   height: 5.5rem;
   max-width: 17.5rem;
   text-align: center;
@@ -64,7 +34,6 @@
   font-weight: 500;
   width: auto;
   height: auto;
-  
 }
 
 @media (min-width: 600px) {
@@ -83,6 +52,10 @@
     right: 8.45rem;
     overflow-y: auto;
     opacity: 1;
+  }
+  button.Author, button.Author_mobile {
+    display: flex;
+    justify-content: flex-end;
   }
 }
 
@@ -119,32 +92,35 @@
   height: 100%;
 }
 
-.Author,
-.Author_mobile {
+button.Author, button.Author_mobile {
   list-style: none;
-  height: 4.5rem;
+  height: auto;
   width: 100%;
   background-color: var(--main_white);
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   text-decoration: none;
   color: var(--primary_grey);
   font-size: 0.75rem;
   font-weight: 500;
   padding: 0 0.5rem;
+  border: none;
+  outline: none;
 }
 
 .Author_mobile.Clicked {
-  color: var(main_black);
+  color: var(--main_black);
   font-weight: 600;
+  outline: 0;
+  border: none;
 }
 
-.Author.Clicked {
+button.Author.Clicked {
   background-color: var(--second_grey);
   color: var(--main_white);
 }
 
-.PodcastsList__list li:hover {
+.PodcastsList__list button.Author:hover {
   color: var(--main_black);
   cursor: pointer;
   background-color: var(--main_grey);
@@ -155,6 +131,12 @@
   margin-left: 0.35rem;
   font-weight: 600;
 }
-.PodcastsList__list li:hover .Indicator {
+
+.PodcastsList__list button.Author:hover .Indicator {
   color: var(--main_black);
+}
+
+.PodcastsList__list button.Author.Clicked:visited {
+  outline-color: var(--main_black);
+  outline: 0;
 }
