--- a/src/components/podcastsList/podcastsList.module.css
+++ b/src/components/podcastsList/podcastsList.module.css
@@ -39,8 +39,9 @@
 @media (min-width: 600px) {
   .PodcastsList__main.Open {
     width: 12rem;
-    height: 10.5rem;
+    height: 12.5rem;
     margin-top: 0.5rem;
+    background-color: var(--main_white);
     border: 1px solid var(--primary_grey);
     border-radius: 3px;
     z-index: 2;
@@ -107,11 +108,11 @@
 
 span.Author{
   list-style: none;
-  height: auto;
-  width: 100%;
+  height: 3rem;
   background-color: var(--main_white);
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   text-decoration: none;
   color: var(--primary_grey);
   font-size: 0.75rem;
@@ -120,6 +121,7 @@ span.Author{
   border: none;
   outline: none;
 }
+
 
 span.Author_mobile.Clicked {
   color: var(--main_black);
@@ -132,7 +134,6 @@ span.Author.Clicked {
   background-color: var(--second_grey);
   color: var(--main_white);
 }
-
 
 .PodcastsList__list span.Author:hover {
   color: var(--main_black);
